# SingAI-RAMRAG-SEA-Languages

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  pipeline.py
src/config/: settings.py
src/guardrails/: domain_guard.py
src/ingestion/: indexer.py  loader.py
src/retrieval/: embedding.py  search.py
tests/: verify_setup.py
